--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   </head>
 
   <body>
-    <h1>Project Template</h1>
-
+    <h1>Projects</h1>
+    <ul id="posts-list"></ul>
+    <section id="posts-grid" class="grid"></section>
     <script src="app.js"></script>
   </body>
 </html>
